{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 190,
  "lineage": "d867b716-8248-d082-9501-9cab059216ac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "DivvyCloud-NAT-GW-EIP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-023c7bc14719bf0a6",
            "domain": "vpc",
            "id": "eipalloc-0ae0637808db487aa",
            "network_interface": "eni-063b500cf279f0204",
            "private_dns": "ip-172-31-62-32.us-west-2.compute.internal",
            "private_ip": "172.31.62.32",
            "public_dns": "ec2-44-231-132-193.us-west-2.compute.amazonaws.com",
            "public_ip": "44.231.132.193",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "DivvyCloud-NAT-GW-EIP2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-06cbe3cd0e1b9fff0",
            "domain": "vpc",
            "id": "eipalloc-039d7f43e198eb57c",
            "network_interface": "eni-0602620515d03bd3f",
            "private_dns": "ip-172-31-69-221.us-west-2.compute.internal",
            "private_ip": "172.31.69.221",
            "public_dns": "ec2-54-202-8-10.us-west-2.compute.amazonaws.com",
            "public_ip": "54.202.8.10",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "DivvyCloud-NAT-GW-EIP3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-04c50d001bdfc042d",
            "domain": "vpc",
            "id": "eipalloc-0e4ecdef1fbbab4f2",
            "network_interface": "eni-0685ced473f5b579d",
            "private_dns": "ip-172-31-81-243.us-west-2.compute.internal",
            "private_ip": "172.31.81.243",
            "public_dns": "ec2-44-227-12-236.us-west-2.compute.amazonaws.com",
            "public_ip": "44.227.12.236",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "DivvyCloud-InternetGateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f101e98579a13c98",
            "owner_id": "014578312761",
            "tags": {
              "Name": "DivvyCloud-InternetGateway"
            },
            "vpc_id": "vpc-0ed963d08d2f1340f"
          },
          "dependencies": [
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "DivvyCloud-ECS-ALB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:014578312761:loadbalancer/app/DivvyCloud-ECS-ALB/5185a6bf363fac86",
            "arn_suffix": "app/DivvyCloud-ECS-ALB/5185a6bf363fac86",
            "dns_name": "DivvyCloud-ECS-ALB-779754116.us-west-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:014578312761:loadbalancer/app/DivvyCloud-ECS-ALB/5185a6bf363fac86",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "DivvyCloud-ECS-ALB",
            "security_groups": [
              "sg-0d71b57ce6dac03b6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01a4add5c3f67cde4"
              },
              {
                "subnet_id": "subnet-037a0b4e1ff8fec98"
              },
              {
                "subnet_id": "subnet-0c5a5e75e3277dc60"
              }
            ],
            "subnets": [
              "subnet-01a4add5c3f67cde4",
              "subnet-037a0b4e1ff8fec98",
              "subnet-0c5a5e75e3277dc60"
            ],
            "timeouts": {
            },
            "vpc_id": "vpc-0ed963d08d2f1340f",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.DivvyCloud-ECS-SecurityGroup-ALB",
            "aws_subnet.DivvyCloud-ECS-Public-Subnet1",
            "aws_subnet.DivvyCloud-ECS-Public-Subnet2",
            "aws_subnet.DivvyCloud-ECS-Public-Subnet3",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "DivvCloud-ECS-ALB-Listener-HTTP",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:014578312761:listener/app/DivvyCloud-ECS-ALB/5185a6bf363fac86/f1c56a95c01d2dc2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:014578312761:targetgroup/DivvyCloud-ECS-ALB-TG/1bcd86e7c64cc47c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:014578312761:listener/app/DivvyCloud-ECS-ALB/5185a6bf363fac86/f1c56a95c01d2dc2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:014578312761:loadbalancer/app/DivvyCloud-ECS-ALB/5185a6bf363fac86",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": {
              "read": null
            }
          },
          "dependencies": [
            "aws_lb.DivvyCloud-ECS-ALB",
            "aws_lb_target_group.DivvyCloud-ECS-ALB-TG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "DivvCloud-ECS-ALB-Listener-HTTPS",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "DivvyCloud-ECS-ALB-TG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:014578312761:targetgroup/DivvyCloud-ECS-ALB-TG/1bcd86e7c64cc47c",
            "arn_suffix": "targetgroup/DivvyCloud-ECS-ALB-TG/1bcd86e7c64cc47c",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/Status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:014578312761:targetgroup/DivvyCloud-ECS-ALB-TG/1bcd86e7c64cc47c",
            "lambda_multi_value_headers_enabled": false,
            "name": "DivvyCloud-ECS-ALB-TG",
            "port": 8001,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ed963d08d2f1340f"
          },
          "dependencies": [
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "DivvyCloud-NAT-GW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae0637808db487aa",
            "id": "nat-0af43e039fee5e19e",
            "network_interface_id": "eni-063b500cf279f0204",
            "private_ip": "172.31.62.32",
            "public_ip": "44.231.132.193",
            "subnet_id": "subnet-037a0b4e1ff8fec98"
          },
          "dependencies": [
            "aws_eip.DivvyCloud-NAT-GW-EIP",
            "aws_subnet.DivvyCloud-ECS-Public-Subnet1",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "DivvyCloud-NAT-GW2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039d7f43e198eb57c",
            "id": "nat-07051ccd4256d470c",
            "network_interface_id": "eni-0602620515d03bd3f",
            "private_ip": "172.31.69.221",
            "public_ip": "54.202.8.10",
            "subnet_id": "subnet-01a4add5c3f67cde4"
          },
          "dependencies": [
            "aws_eip.DivvyCloud-NAT-GW-EIP2",
            "aws_subnet.DivvyCloud-ECS-Public-Subnet2",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "DivvyCloud-NAT-GW3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e4ecdef1fbbab4f2",
            "id": "nat-06e5203d63a0f10b6",
            "network_interface_id": "eni-0685ced473f5b579d",
            "private_ip": "172.31.81.243",
            "public_ip": "44.227.12.236",
            "subnet_id": "subnet-0c5a5e75e3277dc60"
          },
          "dependencies": [
            "aws_eip.DivvyCloud-NAT-GW-EIP3",
            "aws_subnet.DivvyCloud-ECS-Public-Subnet3",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "DivvyCloud-ECS-RouteTable-Private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00762609ace81ffc3",
            "owner_id": "014578312761",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0af43e039fee5e19e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DivvyCloud-ECS-RouteTable-Private"
            },
            "vpc_id": "vpc-0ed963d08d2f1340f"
          },
          "dependencies": [
            "aws_eip.DivvyCloud-NAT-GW-EIP",
            "aws_nat_gateway.DivvyCloud-NAT-GW",
            "aws_subnet.DivvyCloud-ECS-Public-Subnet1",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "DivvyCloud-ECS-RouteTable-Private2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a6ed22cc265e081c",
            "owner_id": "014578312761",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-07051ccd4256d470c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DivvyCloud-ECS-RouteTable-Private2"
            },
            "vpc_id": "vpc-0ed963d08d2f1340f"
          },
          "dependencies": [
            "aws_eip.DivvyCloud-NAT-GW-EIP2",
            "aws_nat_gateway.DivvyCloud-NAT-GW2",
            "aws_subnet.DivvyCloud-ECS-Public-Subnet2",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "DivvyCloud-ECS-RouteTable-Private3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bc1dd548477abe5e",
            "owner_id": "014578312761",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-06e5203d63a0f10b6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DivvyCloud-ECS-RouteTable-Private3"
            },
            "vpc_id": "vpc-0ed963d08d2f1340f"
          },
          "dependencies": [
            "aws_eip.DivvyCloud-NAT-GW-EIP3",
            "aws_nat_gateway.DivvyCloud-NAT-GW3",
            "aws_subnet.DivvyCloud-ECS-Public-Subnet3",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "DivvyCloud-ECS-RouteTable-Public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-003ed2117ecfbb587",
            "owner_id": "014578312761",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f101e98579a13c98",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DivvyCloud-ECS-RouteTable-Public"
            },
            "vpc_id": "vpc-0ed963d08d2f1340f"
          },
          "dependencies": [
            "aws_internet_gateway.DivvyCloud-InternetGateway",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DivvyCloud-ECS-RouteTable-Assoc1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b0811f632aee9bd",
            "route_table_id": "rtb-00762609ace81ffc3",
            "subnet_id": "subnet-0b197bc1cb2436fec"
          },
          "dependencies": [
            "aws_eip.DivvyCloud-NAT-GW-EIP",
            "aws_nat_gateway.DivvyCloud-NAT-GW",
            "aws_route_table.DivvyCloud-ECS-RouteTable-Private",
            "aws_subnet.DivvyCloud-ECS-Private-Subnet1",
            "aws_subnet.DivvyCloud-ECS-Public-Subnet1",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DivvyCloud-ECS-RouteTable-Assoc2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f208ce8f5ed725e",
            "route_table_id": "rtb-0a6ed22cc265e081c",
            "subnet_id": "subnet-0b0c4cde0b18c4c70"
          },
          "dependencies": [
            "aws_eip.DivvyCloud-NAT-GW-EIP2",
            "aws_nat_gateway.DivvyCloud-NAT-GW2",
            "aws_route_table.DivvyCloud-ECS-RouteTable-Private2",
            "aws_subnet.DivvyCloud-ECS-Private-Subnet2",
            "aws_subnet.DivvyCloud-ECS-Public-Subnet2",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DivvyCloud-ECS-RouteTable-Assoc3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096aeb98b315a5159",
            "route_table_id": "rtb-0bc1dd548477abe5e",
            "subnet_id": "subnet-01a7dade08fd10375"
          },
          "dependencies": [
            "aws_eip.DivvyCloud-NAT-GW-EIP3",
            "aws_nat_gateway.DivvyCloud-NAT-GW3",
            "aws_route_table.DivvyCloud-ECS-RouteTable-Private3",
            "aws_subnet.DivvyCloud-ECS-Private-Subnet3",
            "aws_subnet.DivvyCloud-ECS-Public-Subnet3",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DivvyCloud-ECS-RouteTable-Assoc4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e947256ad110f7b1",
            "route_table_id": "rtb-003ed2117ecfbb587",
            "subnet_id": "subnet-037a0b4e1ff8fec98"
          },
          "dependencies": [
            "aws_internet_gateway.DivvyCloud-InternetGateway",
            "aws_route_table.DivvyCloud-ECS-RouteTable-Public",
            "aws_subnet.DivvyCloud-ECS-Public-Subnet1",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DivvyCloud-ECS-RouteTable-Assoc5",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048508f738a792742",
            "route_table_id": "rtb-003ed2117ecfbb587",
            "subnet_id": "subnet-01a4add5c3f67cde4"
          },
          "dependencies": [
            "aws_internet_gateway.DivvyCloud-InternetGateway",
            "aws_route_table.DivvyCloud-ECS-RouteTable-Public",
            "aws_subnet.DivvyCloud-ECS-Public-Subnet2",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DivvyCloud-ECS-RouteTable-Assoc6",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026a89250cda89c20",
            "route_table_id": "rtb-003ed2117ecfbb587",
            "subnet_id": "subnet-0c5a5e75e3277dc60"
          },
          "dependencies": [
            "aws_internet_gateway.DivvyCloud-InternetGateway",
            "aws_route_table.DivvyCloud-ECS-RouteTable-Public",
            "aws_subnet.DivvyCloud-ECS-Public-Subnet3",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DivvyCloud-ECS-SecurityGroup-ALB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014578312761:security-group/sg-0d71b57ce6dac03b6",
            "description": "DivvyCloud UI/ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d71b57ce6dac03b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "1.2.3.4/32",
                  "73.169.50.3/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "DivvyCloud-ECS-SecurityGroup-ALB",
            "name_prefix": null,
            "owner_id": "014578312761",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ed963d08d2f1340f"
          },
          "dependencies": [
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DivvyCloud-ECS-SecurityGroup-RDS",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014578312761:security-group/sg-086b4e07585b400ca",
            "description": "Database Rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086b4e07585b400ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DivvyCloud-ECS-SecurityGroup-RDS",
            "name_prefix": null,
            "owner_id": "014578312761",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ed963d08d2f1340f"
          },
          "dependencies": [
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DivvyCloud-ECS-SecurityGroup-Redis",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014578312761:security-group/sg-08b562d321d8359ce",
            "description": "RedisAccess",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b562d321d8359ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "DivvyCloud-ECS-SecurityGroup-Redis",
            "name_prefix": null,
            "owner_id": "014578312761",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ed963d08d2f1340f"
          },
          "dependencies": [
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DivvyCloud-ECS-SecurityGroup-UI",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014578312761:security-group/sg-05918b28ce705c082",
            "description": "Worker/web rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05918b28ce705c082",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8001
              }
            ],
            "name": "DivvyCloud-ECS-SecurityGroup-UI",
            "name_prefix": null,
            "owner_id": "014578312761",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ed963d08d2f1340f"
          },
          "dependencies": [
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "DivvyCloud-ECS-SecurityGroup-ALB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "1.2.3.4/32",
              "73.169.50.3/32"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3831182089",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d71b57ce6dac03b6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.DivvyCloud-ECS-SecurityGroup-ALB",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "DivvyCloud-ECS-SecurityGroup-ALB3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1960979673",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d71b57ce6dac03b6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.DivvyCloud-ECS-SecurityGroup-ALB",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "DivvyCloud-ECS-SecurityGroup-RDS",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.0.0/16"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-3108264789",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-086b4e07585b400ca",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.DivvyCloud-ECS-SecurityGroup-RDS",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "DivvyCloud-ECS-SecurityGroup-RDS2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2696351907",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-086b4e07585b400ca",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.DivvyCloud-ECS-SecurityGroup-RDS",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "DivvyCloud-ECS-SecurityGroup-Redis",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.0.0/16"
            ],
            "description": "",
            "from_port": 6379,
            "id": "sgrule-3648167459",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08b562d321d8359ce",
            "self": false,
            "source_security_group_id": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.DivvyCloud-ECS-SecurityGroup-Redis",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "DivvyCloud-ECS-SecurityGroup-Redis2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1690499416",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08b562d321d8359ce",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.DivvyCloud-ECS-SecurityGroup-Redis",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "DivvyCloud-ECS-SecurityGroup-UI",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.0.0/16"
            ],
            "description": "",
            "from_port": 8001,
            "id": "sgrule-849528001",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05918b28ce705c082",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8001,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.DivvyCloud-ECS-SecurityGroup-UI",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "DivvyCloud-ECS-SecurityGroup-UI3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2751588267",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05918b28ce705c082",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.DivvyCloud-ECS-SecurityGroup-UI",
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DivvyCloud-ECS-Private-Subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014578312761:subnet/subnet-0b197bc1cb2436fec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-0b197bc1cb2436fec",
            "map_public_ip_on_launch": false,
            "owner_id": "014578312761",
            "tags": {
              "Name": "DivvyCloud-ECS-Private-Subnet1"
            },
            "vpc_id": "vpc-0ed963d08d2f1340f"
          },
          "dependencies": [
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DivvyCloud-ECS-Private-Subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014578312761:subnet/subnet-0b0c4cde0b18c4c70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-0b0c4cde0b18c4c70",
            "map_public_ip_on_launch": false,
            "owner_id": "014578312761",
            "tags": {
              "Name": "DivvyCloud-ECS-Private-Subnet2"
            },
            "vpc_id": "vpc-0ed963d08d2f1340f"
          },
          "dependencies": [
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DivvyCloud-ECS-Private-Subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014578312761:subnet/subnet-01a7dade08fd10375",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.31.32.0/20",
            "id": "subnet-01a7dade08fd10375",
            "map_public_ip_on_launch": false,
            "owner_id": "014578312761",
            "tags": {
              "Name": "DivvyCloud-ECS-Private-Subnet3"
            },
            "vpc_id": "vpc-0ed963d08d2f1340f"
          },
          "dependencies": [
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DivvyCloud-ECS-Public-Subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014578312761:subnet/subnet-037a0b4e1ff8fec98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.31.48.0/20",
            "id": "subnet-037a0b4e1ff8fec98",
            "map_public_ip_on_launch": false,
            "owner_id": "014578312761",
            "tags": {
              "Name": "DivvyCloud-ECS-Public-Subnet1"
            },
            "vpc_id": "vpc-0ed963d08d2f1340f"
          },
          "dependencies": [
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DivvyCloud-ECS-Public-Subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014578312761:subnet/subnet-01a4add5c3f67cde4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.31.64.0/20",
            "id": "subnet-01a4add5c3f67cde4",
            "map_public_ip_on_launch": false,
            "owner_id": "014578312761",
            "tags": {
              "Name": "DivvyCloud-ECS-Public-Subnet2"
            },
            "vpc_id": "vpc-0ed963d08d2f1340f"
          },
          "dependencies": [
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DivvyCloud-ECS-Public-Subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014578312761:subnet/subnet-0c5a5e75e3277dc60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.31.80.0/20",
            "id": "subnet-0c5a5e75e3277dc60",
            "map_public_ip_on_launch": false,
            "owner_id": "014578312761",
            "tags": {
              "Name": "DivvyCloud-ECS-Public-Subnet3"
            },
            "vpc_id": "vpc-0ed963d08d2f1340f"
          },
          "dependencies": [
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "DivvyCloud-ECS-VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014578312761:vpc/vpc-0ed963d08d2f1340f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0c73b63656b844c61",
            "default_route_table_id": "rtb-06f9f0c8a6782889c",
            "default_security_group_id": "sg-04823ccbc5e6781e6",
            "dhcp_options_id": "dopt-1d413278",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ed963d08d2f1340f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06f9f0c8a6782889c",
            "owner_id": "014578312761",
            "tags": {
              "Name": "DivvyCloud-ECS-VPC"
            }
          }
        }
      ]
    }
  ]
}